--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "My CI test",
     "type": "project",
     "require-dev": {
-        "phpunit/phpunit": "^7.1"
+        "phpunit/phpunit": "^7.1",
+        "phpunit/dbunit": "^4.0"
     },
     "authors": [
         {
