--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ test:app:
 coverage:
   stage: test
   script:
-    - ./vendor/bin/phpunit --configuration ./tests/phpunit.xml --coverage-html coverage/ ./tests/
+    - phpunit --configuration ./tests/phpunit.xml --coverage-html coverage/ ./tests/
   artifacts:
     paths:
       - coverage/
