--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,7 @@ before_script:
 - pecl install xdebug
 # Enable Xdebug
 - docker-php-ext-enable xdebug
+- docker-php-ext-enable mysqli
 # Install composer
 - curl -sS https://getcomposer.org/installer | php
 - php composer.phar install
